# wiki

./: .gitignore  .gitmodules  Authentication.md  CNAME  CODE_OF_CONDUCT.md  EmulatorJS-Player.md  README.md  Running-on-Unraid.md  Upgrading-to-3.0.md  justfile  main.py  mkdocs.yml  push_wiki.sh  pyproject.toml  versions.json
.github/workflows/: deploy.yml  trunk-check.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  .vale.ini  svgo.config.mjs
3.7.3/: 404.html  index.html  redirect.html  sitemap.xml
3.7.3/Navigation/: index.html
3.7.3/Troubleshooting/: index.html
3.7.3/search/: search_index.json
3.8.0/: 404.html  index.html  sitemap.xml
3.8.0/Navigation/: index.html
3.8.0/Troubleshooting/: index.html
docs/: 404.html  Navigation.md  index.html  index.md
romm/: Custom-Platforms.md  Generate-API-Keys.md  Reverse-Proxy.md  Scheduled-Tasks.md  Supported-Platforms.md  Troubleshooting.md
romm.wiki/: Brand-Guidelines.md  EmulatorJS-Player.md  Environment-Variables.md  FAQ.md  FAQs.md  Generate-API-Keys.md  Home.md  Igir-Collection-Manager-Guide.md  Igir-ROM-Collection-Manager-Guide.md  Igir-Script.md  OIDC-Setup-With-Authentik.md  OIDC-Setup.md  Quick-Start-Guide.md  Reverse-Proxy.md  RuffleRS-Player.md  Scheduled-Tasks.md  Supported-Platforms.md  Synology-Setup-Guide.md  Synology-Setup.md  Tinfoil-Integration.md  Troubleshooting.md  TrueNAS-Setup-Guide.md  TrueNAS-Setup.md  Unraid-Setup-Guide.md  Unraid-Setup.md  Upgrading-to-3.0.md  WebRcade-Integration-[DEPRECATED].md  _Footer.md  _Sidebar.md
site/: index.html  sitemap.xml
src/: index.md
(+147 files in other folders)
