[project]
name = "wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-markdownextradata-plugin>=0.2.6",
    "mkdocs-material>=9.6.5",
    "mkdocs-video>=1.5.0",
    "pillow>=11.1.0",
    "mkdocs-asciinema-player>=0.16.0"
]
